# cutlery-classifier-mvp

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  benchmark_rtx5090.py  env.example  make.bat  pipeline_diagram.html  project_tree.txt  pyproject.toml  requirements.txt  run_tests.bat  run_tests.sh  setup.py
FINAL_DELIVERY_V2/: README.md
archive/: README_FINAL_DELIVERY.md  fix_test_images.py
config/: model_config.yaml  train_config.yaml  train_config_augmented.yaml
data/: PHOTO_COLLECTION_GUIDE.md  PHOTO_COLLECTION_GUIDE_FINAL.md  collection_checklist.md
data/raw/fork/ikea/: README.md
data/raw/fork/obh/: README.md
data/raw/knife/ikea/: README.md
data/raw/knife/obh/: README.md
data/raw/spoon/ikea/: README.md
data/raw/spoon/obh/: README.md
docs/: image_analysis.md  implementation_roadmap.md  inference_guide.md  performance_tuning.md  raspberry_pi_guide.md  system_architecture.md  troubleshooting.md
models/: MODEL_CARD_TEMPLATE.md  type_detector_info.txt
results/production_validation/: benchmark_rtx5090.txt
scripts/: analyze_images.py  augment_dataset.py  check_augmented_counts.py  create_demo_image.py  deploy.sh  evaluate_model.py  evaluate_on_test_set.py  evaluate_type_detector.py  export_for_raspberry.py  export_model.py  infer_image.py  organize_test_images.py  plot_optuna_results.py  prepare_dataset.py  prepare_full_dataset.py  prepare_split_a_b.py  prepare_test_a_b.py  prepare_val_a_b.py  reorganize_to_3_classes.py  run_inference.py  run_inference_on_pi.py  test_dataset_inference.py  test_folder_inference.py  train_pipeline.py  train_type_detector.py  tune_type_detector.py  validate_dataset.py
src/: __init__.py
src/augment/: generate_diffusion_images.py
src/cutlery_classifier/evaluation/: __init__.py  evaluator.py  metrics.py  production_validation.py
src/cutlery_classifier/inference/: __init__.py  inferencer.py
src/cutlery_classifier/pipeline/: __init__.py
src/cutlery_classifier/pipeline/manufacturer/: __init__.py  pipeline.py
src/cutlery_classifier/scripts/: __init__.py  run_inference.py  test_dataset_inference.py  train_type_detector.py
src/cutlery_classifier/training/: train.py  trainer.py
src/cutlery_classifier/utils/: device.py
src/data/: __init__.py  diffusion_augmentation.py  transforms.py
src/evaluation/: grad_cam.py  metrics.py
src/inference/: __init__.py  inference.py
src/models/: __init__.py  factory.py
src/training/: __init__.py  trainer.py
src/visualization/: grad_cam_utils.py
tests/: test_basic.py  test_end_to_end_inference.py  test_inference.py  test_pipeline.py  test_raspberry_pi.py  test_training.py
tests/src/: __init__.py
tests/src/data/: dataset.py
tests/src/evaluation/: __init__.py  grad_cam.py
tests/src/inference/: inferencer.py
tests/src/pipeline/manufacturer/: __init__.py
tests/src/training/: train.py
