[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cutlery-classifier"
version = "0.1.0"
authors = [
    { name="Claude", email="claude@anthropic.com" },
]
description = "Production-grade cutlery classifier with airport security features"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
namespaces = false 